--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@react-email/components": "^0.0.7",
     "autoprefixer": "10.4.14",
+    "encoding": "^0.1.13",
     "eslint": "8.38.0",
     "eslint-config-next": "13.4.1",
     "mongodb": "^5.4.0",
@@ -19,7 +21,9 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.4",
     "react-toastify": "^9.1.2",
+    "resend": "^1.0.0",
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
